--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "dev:frontend": "cd frontend && npm run dev",
-    "dev:backend": "cd backend && uv run run.py",
+    "dev:backend": "cd backend && uv run -m uvicorn app.main:app --reload --port 8000",
     "install:all": "npm install && cd frontend && npm install && cd ../backend && pip install -r requirements.txt",
     "build": "cd frontend && npm run build",
     "docker:dev": "docker-compose -f docker-compose.dev.yml up --build",
