--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build": "cd frontend && npm run build",
     "docker:dev": "docker-compose -f docker-compose.dev.yml up --build",
     "docker:prod": "docker-compose up --build",
-    "setup:backend": "cd backend && python init_db.py"
+    "docker:db": "docker-compose -f docker-compose-db.yml up --build",
+    "migrate:backend": "cd backend && uv run alembic revision --autogenerate",
+    "setup:backend": "cd backend && uv run alembic upgrade head"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
